--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Stupidface</title>
-
 </head>
 
 <body>
-Hello World<br/>
-This is line two.
-This is line 3.
+Hello World!<br/>
+NEW TO WORLD!<br/>
 </body>
 </html>
