--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>HaHaha</title>
+<title>asdasd</title>
 
 </head>
 
 <body>
 Hello World<br/>
-This is line two.
-This is line 3.
-Hello World!<br/>
-NEW TO WORLD!2<br/>
-Hello what?<br/>
 </body>
 </html>
